tests/js_error/source_locations/expression/unary/plus_to_number.exp
TypeError: symbol cannot be converted to number
  ┌ source_locations/expression/unary/plus_to_number.js:1:2
  |
1 | (+Symbol.iterator)
  |  ^
Stack trace:
  at <global> (source_locations/expression/unary/plus_to_number.js:1:2)